piUDwqw2: FIX - placeholder alignment in send tab

--- a/src/sass/views/tab-send.scss
+++ b/src/sass/views/tab-send.scss
@@ -49,6 +49,7 @@
     border: none;
     .search-input {
       padding-left: 0;
+      line-height: normal;
     }
     .svg#Bitcoin_Symbol {
       width: 14px;
